[gd_scene load_steps=6 format=3 uid="uid://cfxixa14altv8"]

[ext_resource type="Theme" uid="uid://r2ps60h61gx5" path="res://main_theme.tres" id="1_04oa1"]
[ext_resource type="Theme" uid="uid://bhkvjdraqkwk6" path="res://text_button_theme.tres" id="2_v0oe4"]
[ext_resource type="Script" uid="uid://bfe8q4dyhiiuc" path="res://Scripts/option_editor.gd" id="2_y32po"]
[ext_resource type="LabelSettings" uid="uid://cb6xhosfnxffi" path="res://header.tres" id="3_y32po"]
[ext_resource type="PackedScene" uid="uid://c16s6rxycn7r4" path="res://Scenes/preference_selection.tscn" id="4_jwbgl"]

[node name="OptionEditor" type="VBoxContainer"]
theme = ExtResource("1_04oa1")
script = ExtResource("2_y32po")

[node name="HeaderPanel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HeaderPanel"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30

[node name="Header" type="HBoxContainer" parent="HeaderPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 21

[node name="BackButton" type="Button" parent="HeaderPanel/MarginContainer/Header"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_v0oe4")
text = "<"

[node name="Header" type="Label" parent="HeaderPanel/MarginContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "New Option"
label_settings = ExtResource("3_y32po")

[node name="ContentMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30

[node name="Content" type="VBoxContainer" parent="ContentMargin"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="DoneButton" type="Button" parent="ContentMargin/Content"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Tap to create"

[node name="NameEditor" type="LineEdit" parent="ContentMargin/Content"]
layout_mode = 2
placeholder_text = "Enter option name"

[node name="PrefLabel" type="Label" parent="ContentMargin/Content"]
layout_mode = 2
text = "Set personal preference level:"
horizontal_alignment = 1

[node name="PreferenceSelection" parent="ContentMargin/Content" instance=ExtResource("4_jwbgl")]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="ContentMargin/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7372549, 0.42352942, 0.14509805, 1)
horizontal_alignment = 1

[connection signal="pressed" from="HeaderPanel/MarginContainer/Header/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ContentMargin/Content/DoneButton" to="." method="_on_done_button_pressed"]
[connection signal="text_changed" from="ContentMargin/Content/NameEditor" to="." method="_on_name_editor_text_changed"]
